--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^3.2.0",
     "@ignite-ui/react": "^2.2.4",
     "@prisma/client": "^5.3.1",
+    "@tanstack/react-query": "^4.35.7",
     "@types/node": "20.4.4",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
