--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dayjs": "^1.11.10",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
+    "googleapis": "^109.0.1",
     "next": "13.4.12",
     "next-auth": "^4.23.1",
     "nookies": "^2.5.2",
